[package]
name = "thread_pool"
version = "0.0.1"
authors = ["jackie <jackieismpc@gmail.com>"] 
edition = "2024"
description ="A high-performance, low-latency thread pool"
license = "MIT"
repository = "https://github.com/iwanttoeattangyuan/thread_pool.git"
readme = "README.md"
keywords = ["threadpool", "concurrency", "parallel"]

[dependencies]
crossbeam-deque = "0.8.6"
rand = "0.9.2"


[dev-dependencies]
criterion = "0.5"
threadpool = "1.8.1"
rayon = "1.11.0"

[[bench]]
name = "main" # benchmark 的名字，可以任意取
harness = false
